# circuit-io

./: .gitignore  DEPLOYMENT.md  README.md  TEST_RESULTS.md  build_manylinux.sh  pyproject.toml  requiremens.txt  test_circuit_io.py  test_new_api.py  test_place_io.py  upload_pypi.sh
.claude/skills/circuit-io/: SKILL.md
.claude/skills/circuit-io/references/: api_reference.md
.github/workflows/: build-wheels.yml  publish.yml
cpp/: README.md
cpp/place_io/: CMakeLists.txt  __init__.py
cpp/place_io/src/: PyPlaceDB.h  PybindPyPlaceDB.cpp  place_io.cpp  place_io_bind.cpp
cpp/utility/: CMakeLists.txt
raw_benchmarks/: ispd2005_2015.py  ispd2019.py
