[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "place_io"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
description = "Circuit placement I/O library with multi-format support (Bookshelf, LEF/DEF, Verilog)"
authors = [
    {name = "Yibo Lin", email = "yibolin@utexas.edu"},
    {name = "circuit-io contributors", email = "contact@gradinnovate.com"}
]
keywords = ["vlsi", "placement", "ic-design", "bookshelf", "lef", "def", "verilog", "ispd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = ["-DCMAKE_BUILD_TYPE=Release", "-DINSTALL_LIMBO=OFF"]
wheel.py-api = "cp39"

[tool.scikit-build.cmake.define]
SKBUILD_PROJECT_VERSION = "$PROJECT_VERSION"

[tool.scikit-build.metadata]
version = "versioneer:get_version()"
requires-python = ">=3.8"

# Build separate packages for different Python versions with ABIs
[[tool.scikit-build.wheel-tag]]
python = "cp38-*"
abi = "manylinux2014_x86_64"
tag = "cp38-manylinux"

[[tool.scikit-build.wheel-tag]]
python = "cp39-*"
abi = "manylinux2014_x86_64"
tag = "cp39-manylinux"

[[tool.scikit-build.wheel-tag]]
python = "cp310-*"
abi = "manylinux2014_x86_64"
tag = "cp310-manylinux"

[[tool.scikit-build.wheel-tag]]
python = "cp311-*"
abi = "manylinux2014_x86_64"
tag = "cp311-manylinux"

[[tool.scikit-build.wheel-tag]]
python = "cp312-*"
abi = "manylinux2014_x86_64"
tag = "cp312-manylinux"

[[tool.scikit-build.wheel-tag]]
python = "cp38-*"
abi = "manylinux2_17_x86_64"
tag = "cp38-macos"

[[tool.scikit-build.wheel-tag]]
python = "cp39-*"
abi = "manylinux2_17_x86_64"
tag = "cp39-macos"

[[tool.scikit-build.wheel-tag]]
python = "cp310-*"
abi = "manylinux2_17_x86_64"
tag = "cp310-macos"

[[tool.scikit-build.wheel-tag]]
python = "cp311-*"
abi = "manylinux2_17_x86_64"
tag = "cp311-macos"

[[tool.scikit-build.wheel-tag]]
python = "cp312-*"
abi = "manylinux2_17_x86_64"
tag = "cp312-macos"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "cpp/place_io"
versionfile_build = "cpp/place_io"
versionfile = "PLACE_IO_VERSION"
