[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "circuit_io"
version = "0.4.0"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
description = "Circuit placement I/O library with multi-format support (Bookshelf, LEF/DEF, Verilog)"
authors = [
    {name = "Magi Chen", email = "magi@gradinnovate.com"}
]
keywords = ["vlsi", "ic-design", "bookshelf", "lef", "def", "verilog", "ispd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.source-dir = "cpp/place_io"
cmake.args = ["-DCMAKE_BUILD_TYPE=Release", "-DINSTALL_LIMBO=OFF"]
cmake.define = {SKBUILD_PROJECT_VERSION = "$PROJECT_VERSION"}
